--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "modules",
   "version": "1.0.0",
   "description": "",
-  "main": "pool.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server/server.js"
